# mvx-proofmind

./: AI-CONFIG.md  DEPLOY.md  README.md  docker-compose.yml  package.json  vercel.json
contract/: Cargo.toml
contract/src/: lib.rs
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CertificateForm.tsx  Dashboard.tsx  WalletConnect.tsx
frontend/src/services/: blockchain.ts
frontend/src/types/: index.ts
